# ramsey-numbers

./: .gitignore  CMakeLists.txt  README.md
include/: graph.h  matrix.h  ramsey.h
results/: cis_results.csv  classical_cis_bintree_ramsey_high_results.csv  classical_cis_bintree_ramsey_low_results.csv  classical_cis_linear_ramsey_high_results.csv  classical_cis_linear_ramsey_low_results.csv  classical_cis_linear_ramsey_results.csv  classical_cis_ramsey_results.csv  classical_cis_ramsey_results_33.csv  classical_cis_ramsey_results_44.csv  classical_cis_ramsey_results_55.csv  classical_cis_reduced_bintree_ramsey_high_results.csv  classical_cis_reduced_bintree_ramsey_low_results.csv  nirvana_classical_cis_ramsey_results.csv
scripts/: cis_algorithm_difference_visual.py  cis_algorithm_regression_visual.py  cis_algorithm_visual.py  cis_case_visual.py  cis_compute_known.sh  cis_regression.py  cis_test_known.sh  large_functions.py  longramsey.slurm
scripts/cluster_scripts/: ramsey_runtime_bintree_high.slurm  ramsey_runtime_bintree_low.slurm  ramsey_runtime_linear_high.slurm  ramsey_runtime_linear_low.slurm  ramsey_runtime_reduced_bintree_high.slurm  ramsey_runtime_reduced_bintree_low.slurm
src/: benchmark_main.cpp  cis_bintree_main.cpp  cis_correctness_main.cpp  cis_linear_main.cpp  cis_main.cpp  cis_reduced_bintree_main.cpp  graph.cpp  linear_main.cpp  matrix.cpp  ramsey.cpp  test.cpp
